[metadata]
name = ghanat
url = https://git.alibaba.ir/ailab/ghanat
license = BSD 3 Clause
author = Alibaba AI Lab
author_email = ai@alibaba.ir
description = ghanat is core of Alibaba Feature Store.
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Machine Learning Engineers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.8
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    # direct dependencies
    pandas
    pyspark
    croniter
    pendulum
    pyarrow
    # indirect dependencies

[options.packages.find]
exclude = tests

[options.extras_require]
testing = pytest
coverage = pytest-cov

[tool:pytest]
# addopts =
#     --numprocesses=auto
norecursedirs = .* build dist .venv test_data
testpaths = tests ghanat
filterwarnings =
    always

[flake8]
max-line-length = 100
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.eggs,*.egg,node_modules

[isort]
profile = black
